# oanda-connector

./: .env.example  .gitignore  Cargo.toml  README.md
benches/: fetch_benchmark.rs
examples/: fetch_example.rs
src/: client.rs  config.rs  endpoints.rs  error.rs  lib.rs  models.rs  rate_limiter.rs
tests/: integration_tests.rs  mock_server.rs
