[package]
name = "oanda-connector"
version = "0.1.0"
edition = "2021"
authors = ["Guilherme F. G. Santos <guifernandosantos@gmail.com>"]
description = "High-performance Rust client for OANDA's trading API"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12.24", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.17"

# Async utilities
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
criterion = { version = "0.7.0", features = ["async_tokio"] }
futures = "0.3"

[[bench]]
name = "fetch_benchmark"
harness = false
